# harp

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release-python.yml
.scm/: config.yaml  context.md
.scm/context-fragments/general/: code-quality.yaml
.scm/context-fragments/lang/python/: python.yaml
bindings/go/: README.md  go.mod  harp.go  harp_test.go  harp_wasm_core.wasm
bindings/go/cmd/harp/: main.go
bindings/typescript/: README.md  package.json  test.mjs
crates/harp-cli/: Cargo.toml
crates/harp-cli/src/: main.rs
crates/harp-core/: Cargo.toml  README.md
crates/harp-core/src/: error.rs  lib.rs  words.rs
crates/harp-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/harp-ffi/src/: lib.rs
crates/harp-python/: Cargo.toml  README.md  pyproject.toml
crates/harp-python/src/: lib.rs
crates/harp-wasm/: Cargo.toml
crates/harp-wasm-core/: Cargo.toml
crates/harp-wasm-core/.cargo/: config.toml
crates/harp-wasm-core/src/: lib.rs
crates/harp-wasm/src/: lib.rs
docker/: cli.Dockerfile  go.Dockerfile  python.Dockerfile  rust.Dockerfile  wasm.Dockerfile
examples/go/: Dockerfile  go.mod  justfile  main.go
examples/node/: Dockerfile  harp-cli.js  justfile  package.json
examples/python/: Dockerfile  harp_cli.py  justfile
