[workspace]
resolver = "2"
members = [
    "crates/harp-core",
    "crates/harp-cli",
    "crates/harp-ffi",
    "crates/harp-python",
    "crates/harp-wasm",
    "crates/harp-wasm-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/benjaminabbitt/harp"
authors = ["babbitt"]
description = "Generate random names from adjectives and nouns"
keywords = ["random", "name", "generator"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[workspace.dependencies]
harp-core = { path = "crates/harp-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
flate2 = "1"
