[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "harp-names"
version = "0.1.0"
description = "Generate random names from adjectives and nouns"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
authors = [{ name = "babbitt" }]
keywords = ["random", "name", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/benjaminabbitt/harp"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "harp"
strip = true
